Finished cleanup from Publisher import.

--- a/countryside-tours.html
+++ b/countryside-tours.html
@@ -1,183 +1,112 @@
-<html xmlns="http://www.w3.org/TR/REC-html40">
+<!doctype html>
+<html>
+  <head>
+    <meta http-equiv=Content-Type content="text/html; utf-8">
+    <link rel=stylesheet type="text/css" href="style.css">
+    <title>Countryside Tours</title>
+</head>
 
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<link id=Main-File rel=Main-File href="../index.htm">
-<title>Countryside Tours</title>
-<body link=maroon vlink="#660099" bgcolor="#B2B2B2" background=image001.jpg
-style='tab-interval:.5in;margin:0'>
+<body background="img/background.jpg" style="margin:0">
 
-<div style='position:relative;width:7.9166in;height:48.0in'>
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:34;left:1px;top:1px;width:757px;height:134px'><img width=757
-height=134 src=image002.gif v:shapes="_x0000_s1105"></span>
-<v:rect
- id="_x0000_s1106" style='position:absolute;left:2.55pt;top:190.21pt;width:567.45pt;
- height:3265.79pt;z-index:35;visibility:visible;mso-wrap-edited:f;
- mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
- mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' fillcolor="white [7]"
- stroked="f" strokecolor="black [0]" o:cliptowrap="t">
- <v:stroke color2="white [7]">
-  <o:left v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:top v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:right v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:bottom v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:column v:ext="view" color="black [0]" color2="white [7]"/>
- </v:stroke>
- <v:shadow color="#ccc [4]"/>
- <v:path insetpenok="f"/>
- <o:lock v:ext="edit" shapetype="t"/>
- <v:textbox style='mso-column-margin:2mm' inset="2.88pt,2.88pt,2.88pt,2.88pt">
-  <div dir=ltr>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>We are here to arrange custom trips for you
-  during your stay in Mongolia.<span style='mso-spacerun:yes'>  </span>Please
-  contact us with your questions and needs.</span><span style='language:EN;
-  mso-ansi-language:EN'><o:p></o:p></span></p>
-  <h3><span style='language:EN;mso-ansi-language:EN'>Countryside Tours<o:p></o:p></span></h3>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>After a short stay in Ulanbaatar, it’s time
-  to get out of the city and into the countryside!<span
-  style='mso-spacerun:yes'>  </span>That is the desire and goal of most of the
-  tourists who come to Mongolia.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>Mongolia is a vast, largely undeveloped
-  country and as such, is not easy to get around in.<span
-  style='mso-spacerun:yes'>  </span>Even roads are few and far between.<span
-  style='mso-spacerun:yes'>  </span>Often you’ll find yourself traveling across
-  the wild country simply following tracks — or sometimes not even that!<span
-  style='mso-spacerun:yes'>  </span>Helps that we are used to, such as service
-  stations and mechanics, are rare in this land.<span
-  style='mso-spacerun:yes'>  </span>To navigate this country, you will need the
-  help of people who know it!<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>Wherever your travel goals are in Mongolia
-  — to the desert land of the Gobi in the south, the high mountain Khazak
-  region in the west, or the beautiful Khovsgol Nuur (Lake Hovsgol) set in the
-  Siberian taiga of the north — we can take you there and at the same time, see
-  to it that you experience the ‘real’ Mongolia and its people and learn about
-  our history.<o:p></o:p></span></p>
-  <h3><span style='language:EN;mso-ansi-language:EN'>Closer to Ulanbaatar<o:p></o:p></span></h3>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>Distances are great in Mongolia and are not
-  traveled over as quickly as in the more developed parts of the world.<span
-  style='mso-spacerun:yes'>  </span>This is part of the excitement of visiting
-  Mongolia; however, it also adds to the difficulty of the visit!<span
-  style='mso-spacerun:yes'>  </span>Travel over long distances can be
-  exhausting, expensive, and require more time than many visitors have at their
-  disposal.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>However, there is an answer!<span
-  style='mso-spacerun:yes'>  </span>The steppes and mountains close to
-  Ulanbaatar are beautiful places to visit and they give you as true an
-  exposure to the real nomadic way of life as a visit to the more far-flung
-  regions of the country.<span style='mso-spacerun:yes'>  </span>Unlike in many
-  areas of the world, when you leave the city (UB), you find yourself truly in
-  the countryside.<span style='mso-spacerun:yes'>  </span>No urban sprawl
-  extending for miles (or kilometers) here!<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>We can help you arrange visits to the
-  beautiful nearby alpine area of Terelj where, if you’d like, you can go
-  hiking, rock climbing, horse riding, and rafting.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'><o:p></o:p></span></p>
+<div style="width:90%;margin-left:auto;margin-right:auto;">
+  <!-- header div -->
+  <div style="height:130px;">
+  <p style="position:absolute;z-index:2;right:5%;font-size:75%;margin-top:5px;padding-right:5px;">
+    <strong>Discover Native Mongolia</strong></p>
+
+  <img src="img/top-bar.gif" style="position:absolute;z-index:-10;width:90%;height:125px;">
+  <img height=3 src="img/top-blue.gif" style="position:absolute;z-index:-9;width:90%;top:115px;">
+  <p height=3 class="align-right" style="position:absolute;top:115px;background-color:white;width:360px;height:3px;right:5%;">&nbsp;</p>
+  <img src="img/index-horizon.jpg" class="align-right" style="position:relative;z-index:-8;width:360px;height:125px;">
+  <img src="img/logo.gif" style="position:relative;top:40px;">
+
+  <p style="color:white;text-align:right;position:absolute;top:50px;right:5%;font-size:150%;">
+    <strong>TTNTours</strong></p> 
   </div>
- </v:textbox>
-</v:rect>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:36;left:9px;top:1006px;width:741px;height:64px'><img
-width=741 height=64 src=image035.gif v:shapes="_x0000_s1107 _x0000_s1109"></span>
+  <ul id="nav">
+    <li class="first"><a href="http://nativemongolia.com/">Home</a></li>
+    <li><a href="/about-us.html">About Us</a></li>
+    <li><a href="/testimonials.html">Testimonials</a></li>
+    <li><a href="/ulanbaatar-tours.html">Ulaanbaatar Tours</a></li>
+    <li><a href="/countryside-tours.html">Countryside Tours</a></li>
+    <li><a href="/nomadic-family.html">Visit with Nomadic Family</a></li>
+  </ul>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:37;left:8px;top:1001px;width:745px;height:4px'><img width=745
-height=4 src=image005.gif v:shapes="_x0000_s1110"></span>
+  <img height=3 src="img/navbar-bottom.gif" style="width:100%;">
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:38;left:5px;top:252px;width:750px;height:3px'><img width=750
-height=3 src=image006.gif v:shapes="_x0000_s1111"></span>
+  <!-- div containing the content below the navbar -->
+  <div>
+ 
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:39;left:404px;top:0px;width:356px;height:136px'><img
-width=356 height=136 src=image037.jpg v:shapes="_x0000_s1112"></span>
+    <p>We are here to arrange custom trips for you during your stay in Mongolia. Please
+      contact us with your questions and needs.</p>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:40;left:-1px;top:135px;width:396px;height:3px'><img width=396
-height=3 src=image009.gif v:shapes="_x0000_s1113"></span>
+    <center><h3 style="width:200px">Countryside Tours</h3></center>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:41;left:392px;top:135px;width:360px;height:3px'><img
-width=360 height=3 src=image010.gif v:shapes="_x0000_s1114"></span>
+    <p>After a short stay in Ulanbaatar, it’s time to get out of the city and 
+      into the countryside! That is the desire and goal of most of the
+      tourists who come to Mongolia.</p>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:42;left:396px;top:5px;width:358px;height:21px'>
+    <p>Mongolia is a vast, largely undeveloped country and as such, is not easy 
+      to get around in. Even roads are few and far between. Often you’ll find 
+      yourself traveling across the wild country simply following tracks — 
+      or sometimes not even that! Helps that we are used to, such as service
+      stations and mechanics, are rare in this land. To navigate this country, 
+      you will need the help of people who know it!</p>
 
-<table cellpadding=0 cellspacing=0>
- <tr>
-  <td width=358 height=21 style='vertical-align:top'>
-  <div v:shape="_x0000_s1115" style='padding:2.85pt 2.85pt 2.85pt 2.85pt'
-  class=shape>
-  <p class=MsoTagline><span style='font-size:7.65pt;line-height:100%;
-  font-family:Verdana;mso-latin-font-family:Verdana;mso-greek-font-family:Verdana;
-  mso-cyrillic-font-family:Verdana;mso-latinext-font-family:Verdana;language:
-  EN;mso-ansi-language:EN'>Discover Native Mongolia<o:p></o:p></span></p>
+    <p>Wherever your travel goals are in Mongolia — to the desert land of the 
+      Gobi in the south, the high mountain Khazak region in the west, or the 
+      beautiful Khovsgol Nuur (Lake Hovsgol) set in the Siberian taiga of the north 
+      — we can take you there and at the same time, see to it that you 
+      experience the ‘real’ Mongolia and its people and learn about
+      our history.</p>
+
+    <center><h3 style="width:250px">Closer to Ulanbaatar</h3></center>
+
+    <p>Distances are great in Mongolia and are not traveled over as quickly as 
+      in the more developed parts of the world. This is part of the excitement of 
+      visiting Mongolia; however, it also adds to the difficulty of the visit!
+      Travel over long distances can be exhausting, expensive, and require more 
+      time than many visitors have at their disposal.</p>
+    <p>However, there is an answer! The steppes and mountains close to
+      Ulanbaatar are beautiful places to visit and they give you as true an
+      exposure to the real nomadic way of life as a visit to the more far-flung
+      regions of the country. Unlike in many areas of the world, when you leave 
+      the city (UB), you find yourself truly in the countryside. No urban sprawl
+      extending for miles (or kilometers) here!</p>
+
+    <p>We can help you arrange visits to the beautiful nearby alpine area of 
+      Terelj where, if you’d like, you can go hiking, rock climbing, horse riding, 
+      and rafting.</p>
+
+   
+    <img src="img/tsoogii-with-dog.jpg">
+    <img src="img/boroo.jpg">
+    <img src="img/tsoogii.jpg">
+    <img src="img/picnic.jpg">
+    <img src="img/riding.jpg">
   </div>
-  </td>
- </tr>
-</table>
 
-</span>
+  <!-- footer -->
+  <img height=3 src="img/bottom-blue.gif" style="width:100%;">
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:43;left:405px;top:102px;width:349px;height:32px'>
+  <div>
+    <div style="width:327px;" class="align-left">
+      <img height=182 src="img/soldiers.jpg">
+    </div>
 
-<table cellpadding=0 cellspacing=0>
- <tr>
-  <td width=349 height=32 valign=middle style='vertical-align:top'>
-  <div v:shape="_x0000_s1116" style='padding:3.3749pt 2.85pt 2.85pt 2.85pt'
-  class=shape>
-  <p class=MsoOrganizationName><span style='font-size:14.35pt;line-height:100%;
-  font-family:Verdana;language:EN;mso-ansi-language:EN'>TTNTours<o:p></o:p></span></p>
+    <div style="background-color:white;width:700px;position:relative;left:15px;z-index:-10;">
+      <h3 style="color:#066;">To Contact Us:</h3>
+      <p>USA Phone: 218-201-0488 (Janlyn Gosse)</p>
+      <p class="no-indent">E-mail: Tsoogii2000mon@yahoo.com (Tsoogii)</p>
+      <p class="no-indent">Alternate E-mail: Janlyn@snowgoose.biz (Janlyn Gosse)</p>
+    </div>
+    
   </div>
-  </td>
- </tr>
-</table>
-
-</span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:44;left:10px;top:156px;width:740px;height:67px'><map
-name=MicrosoftOfficeMap0><area shape=Rect
-coords="185, 34, 370, 67" href="page0003.htm"><area shape=Rect
-coords="555, 0, 740, 34" href="page0001.htm"><area shape=Rect
-coords="370, 0, 555, 34" href="page0004.htm"><area shape=Rect
-coords="185, 0, 370, 34" href="page0005.htm"><area shape=Rect
-coords="0, 0, 185, 34" href="../index.htm"></map><img border=0 width=740
-height=67 src=image038.gif usemap="#MicrosoftOfficeMap0" v:shapes="_x0000_s1117 _x0000_s1119 _x0000_s1120 _x0000_s1121 _x0000_s1122 _x0000_s1123 _x0000_s1124 _x0000_s1125 _x0000_s1126 _x0000_s1127 _x0000_s1128 _x0000_s1129 _x0000_s1130 _x0000_s1131 _x0000_s1132 _x0000_s1133 _x0000_s1134 _x0000_s1135"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:45;left:31px;top:68px;width:108px;height:54px'><img width=108
-height=54 src=image013.gif v:shapes="_x0000_s1136 _x0000_s1138 _x0000_s1139"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:106;left:544px;top:860px;width:180px;height:134px'><img
-width=180 height=134 src=image040.jpg v:shapes="_x0000_s1308"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:107;left:284px;top:856px;width:196px;height:146px'><img
-width=196 height=146 src=image042.jpg v:shapes="_x0000_s1309"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:108;left:252px;top:540px;width:148px;height:110px'><img
-width=148 height=110 src=image044.jpg v:shapes="_x0000_s1310"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:109;left:484px;top:520px;width:184px;height:146px'><img
-width=184 height=146 src=image046.jpg v:shapes="_x0000_s1311"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:112;left:88px;top:532px;width:108px;height:114px'><img
-width=108 height=114 src=image048.jpg v:shapes="_x0000_s1314"></span>
+  
+  <img style="width:80%;position:relative;left:10%;" height=4 src="img/footer-bar.gif">
+ 
 </div>
 
 </body>
