--- a/nomadic-family.html
+++ b/nomadic-family.html
@@ -1,163 +1,98 @@
-<html xmlns="http://www.w3.org/TR/REC-html40">
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<link id=Main-File rel=Main-File href="../index.htm">
-<title>Visit with Nomadic Family</title>
+<!doctype html>
+<html>
+  <head>
+    <meta http-equiv=Content-Type content="text/html; utf-8">
+    <link rel=stylesheet type="text/css" href="style.css">
+    <title>Visit with Nomadic Family</title>
 </head>
 
-<body link=maroon vlink="#660099" bgcolor=white background=image049.gif
-style='tab-interval:.5in;margin:0'>
+<body background="img/background.jpg" style="margin:0">
 
-<div style='position:relative;width:7.9166in;height:48.0in'>
+<div style="width:90%;margin-left:auto;margin-right:auto;">
+  <!-- header div -->
+  <div style="height:130px;">
+  <p style="position:absolute;z-index:2;right:5%;font-size:75%;margin-top:5px;padding-right:5px;">
+    <strong>Discover Native Mongolia</strong></p>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:46;left:1px;top:1px;width:757px;height:134px'><img width=757
-height=134 src=image002.gif v:shapes="_x0000_s1140"></span>
- <v:textbox style='mso-column-margin:2mm' inset="2.88pt,2.88pt,2.88pt,2.88pt">
-  <div dir=ltr>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>We are here to arrange custom trips for you
-  during your time in Mongolia.<span style='mso-spacerun:yes'>  </span>Please
-  contact us with your questions and needs.<o:p></o:p></span></p>
-  <h3><span style='language:EN;mso-ansi-language:EN'>Countryside Visit with
-  Nomadic Family<o:p></o:p></span></h3>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>We are pleased to make available to you a
-  very special opportunity for a home stay with native Mongolians in the
-  steppes outside of UlanBaatar.<span style='mso-spacerun:yes'>  </span>You
-  will stay in a real ger (not the concrete floor, tourist version often found
-  in tourist camps); observe the nomadic families’ activities; and also have
-  the opportunity to hike and go on horse treks.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>You will be able to experience the real
-  nomadic way of life, yet at the same time, you won’t have to travel far to do
-  it.<span style='mso-spacerun:yes'>  </span>Rather than spend much of your
-  valuable time riding for days in a jeep or van across the countryside, you
-  will be at your site within an hour or so.<span style='mso-spacerun:yes'> 
-  </span>The drive there will be on actual roads, so it will be easier and more
-  comfortable than a trek across the country.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>The nomadic family has goats, sheep, and
-  horses, and they milk all three of those animals!<span
-  style='mso-spacerun:yes'>  </span>You will learn about their daily herding
-  and milking activities, learn about the peoples’ traditional costumes, and
-  see how traditional foods are made.<span style='mso-spacerun:yes'> 
-  </span>You will eat with the family and enjoy the renowned Mongolian
-  hospitality!<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>Because we are a small company, we can be
-  flexible to suit your needs and desires.<span style='mso-spacerun:yes'> 
-  </span>We recommend a stay of 2 to 3 nights in order to start understanding
-  and feeling the nomadic pace of life.<span style='mso-spacerun:yes'> 
-  </span>However, we can arrange for your stay to be shorter or longer to fit
-  in with your itinerary.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'>We are excited to extend this opportunity
-  to you, as it is an ideal way to achieve our goal of showing you the real
-  Mongolian nomadic lifestyle in a way that is convenient and inexpensive for
-  you. Please contact us to plan your
-  countryside visit!<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='font-size:12.0pt;line-height:100%;
-  language:EN;mso-ansi-language:EN'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
+  <img src="img/top-bar.gif" style="position:absolute;z-index:-10;width:90%;height:125px;">
+  <img height=3 src="img/top-blue.gif" style="position:absolute;z-index:-9;width:90%;top:115px;">
+  <p height=3 class="align-right" style="position:absolute;top:115px;background-color:white;width:360px;height:3px;right:5%;">&nbsp;</p>
+  <img src="img/index-horizon.jpg" class="align-right" style="position:relative;z-index:-8;width:360px;height:125px;">
+  <img src="img/logo.gif" style="position:relative;top:40px;">
+
+  <p style="color:white;text-align:right;position:absolute;top:50px;right:5%;font-size:150%;">
+    <strong>TTNTours</strong></p> 
   </div>
- </v:textbox>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:48;left:9px;top:1006px;width:741px;height:64px'><img
-width=741 height=64 src=image051.gif v:shapes="_x0000_s1142 _x0000_s1144"></span>
+  <ul id="nav">
+    <li class="first"><a href="http://nativemongolia.com/">Home</a></li>
+    <li><a href="/about-us.html">About Us</a></li>
+    <li><a href="/testimonials.html">Testimonials</a></li>
+    <li><a href="/ulanbaatar-tours.html">Ulaanbaatar Tours</a></li>
+    <li><a href="/countryside-tours.html">Countryside Tours</a></li>
+    <li><a href="/nomadic-family.html">Visit with Nomadic Family</a></li>
+  </ul>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:49;left:8px;top:1001px;width:745px;height:4px'><img width=745
-height=4 src=image005.gif v:shapes="_x0000_s1145"></span>
+  <img height=3 src="img/navbar-bottom.gif" style="width:100%;">
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:50;left:5px;top:252px;width:750px;height:3px'><img width=750
-height=3 src=image006.gif v:shapes="_x0000_s1146"></span>
+  <!-- div containing the content below the navbar -->
+  <div>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:51;left:492px;top:28px;width:268px;height:125px'><img
-width=268 height=125 src=image053.jpg v:shapes="_x0000_s1147"></span>
+    <p>We are here to arrange custom trips for you during your time in Mongolia. Please
+      contact us with your questions and needs.</p>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:52;left:-1px;top:135px;width:396px;height:3px'><img width=396
-height=3 src=image009.gif v:shapes="_x0000_s1148"></span>
+    <h3>Countryside Visit with Nomadic Family</h3>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:53;left:392px;top:135px;width:360px;height:3px'><img
-width=360 height=3 src=image010.gif v:shapes="_x0000_s1149"></span>
+    <p>We are pleased to make available to you a very special opportunity for a home stay 
+      with native Mongolians in the steppes outside of UlanBaatar. You will stay in a real ger 
+      (not the concrete floor, tourist version often found in tourist camps); observe the nomadic 
+      families’ activities; and also have the opportunity to hike and go on horse treks.</p>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:54;left:396px;top:5px;width:358px;height:21px'>
+     <p>You will be able to experience the real nomadic way of life, yet at the same time, you won’t 
+       have to travel far to do it. Rather than spend much of your valuable time riding for days in a jeep 
+       or van across the countryside, you will be at your site within an hour or so. The drive there will 
+       be on actual roads, so it will be easier and more comfortable than a trek across the country.</p>
 
-<table cellpadding=0 cellspacing=0>
- <tr>
-  <td width=358 height=21 style='vertical-align:top'>
-  <div v:shape="_x0000_s1150" style='padding:2.85pt 2.85pt 2.85pt 2.85pt'
-  class=shape>
-  <p class=MsoTagline><span style='font-size:7.65pt;line-height:100%;
-  font-family:Verdana;mso-latin-font-family:Verdana;mso-greek-font-family:Verdana;
-  mso-cyrillic-font-family:Verdana;mso-latinext-font-family:Verdana;language:
-  EN;mso-ansi-language:EN'>Discover Native Mongolia<o:p></o:p></span></p>
+    <p>The nomadic family has goats, sheep, and horses, and they milk all three of those animals! You will 
+      learn about their daily herding and milking activities, learn about the peoples’ traditional costumes, and
+      see how traditional foods are made. You will eat with the family and enjoy the renowned Mongolian
+      hospitality!</p>
+
+    <p>Because we are a small company, we can be flexible to suit your needs and desires. We recommend a stay of 
+      2 to 3 nights in order to start understanding and feeling the nomadic pace of life. However, we can arrange 
+      for your stay to be shorter or longer to fit in with your itinerary.</p>
+
+    <p>We are excited to extend this opportunity to you, as it is an ideal way to achieve our goal of showing you the real
+      Mongolian nomadic lifestyle in a way that is convenient and inexpensive for you. Please contact us to plan your
+      countryside visit!</p>
+
+    <img src="img/cattle.jpg">
+    <img src="img/cattle-close.jpg">
+    <img src="img/family.jpg">
+    <img src="img/gers.jpg">
+    <img src="img/ger.jpg">
+
   </div>
-  </td>
- </tr>
-</table>
 
-</span>
+  <!-- footer -->
+  <img height=3 src="img/bottom-blue.gif" style="width:100%;">
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:55;left:405px;top:102px;width:349px;height:32px'>
+  <div>
+    <div style="width:327px;" class="align-left">
+      <img height=182 src="img/soldiers.jpg">
+    </div>
 
-<table cellpadding=0 cellspacing=0>
- <tr>
-  <td width=349 height=32 valign=middle style='vertical-align:top'>
-  <div v:shape="_x0000_s1151" style='padding:3.3749pt 2.85pt 2.85pt 2.85pt'
-  class=shape>
-  <p class=MsoOrganizationName><span style='font-size:14.35pt;line-height:100%;
-  font-family:Verdana;language:EN;mso-ansi-language:EN'>TTNTours<o:p></o:p></span></p>
+    <div style="background-color:white;width:700px;position:relative;left:15px;z-index:-10;">
+      <h3 style="color:#066;">To Contact Us:</h3>
+      <p>USA Phone: 218-201-0488 (Janlyn Gosse)</p>
+      <p class="no-indent">E-mail: Tsoogii2000mon@yahoo.com (Tsoogii)</p>
+      <p class="no-indent">Alternate E-mail: Janlyn@snowgoose.biz (Janlyn Gosse)</p>
+    </div>
+    
   </div>
-  </td>
- </tr>
-</table>
+  
+  <img style="width:80%;position:relative;left:10%;" height=4 src="img/footer-bar.gif">
 
-</span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:56;left:10px;top:156px;width:740px;height:67px'><map
-name=MicrosoftOfficeMap0><area shape=Rect
-coords="0, 34, 185, 67" href="page0002.htm"><area shape=Rect
-coords="555, 0, 740, 34" href="page0001.htm"><area shape=Rect
-coords="370, 0, 555, 34" href="page0004.htm"><area shape=Rect
-coords="185, 0, 370, 34" href="page0005.htm"><area shape=Rect
-coords="0, 0, 185, 34" href="../index.htm"></map><img border=0 width=740
-height=67 src=image054.gif usemap="#MicrosoftOfficeMap0" v:shapes="_x0000_s1152 _x0000_s1154 _x0000_s1155 _x0000_s1156 _x0000_s1157 _x0000_s1158 _x0000_s1159 _x0000_s1160 _x0000_s1161 _x0000_s1162 _x0000_s1163 _x0000_s1164 _x0000_s1165 _x0000_s1166 _x0000_s1167 _x0000_s1168 _x0000_s1169 _x0000_s1170"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:57;left:31px;top:68px;width:108px;height:54px'><img width=108
-height=54 src=image013.gif v:shapes="_x0000_s1171 _x0000_s1173 _x0000_s1174"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:110;left:32px;top:862px;width:184px;height:138px'><img
-width=184 height=138 src=image056.jpg v:shapes="_x0000_s1312"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:111;left:488px;top:840px;width:181px;height:162px'><img
-width=181 height=162 src=image058.jpg v:shapes="_x0000_s1313"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:114;left:516px;top:280px;width:173px;height:130px'><img
-width=173 height=130 src=image060.jpg v:shapes="_x0000_s1316"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:115;left:304px;top:856px;width:142px;height:135px'><img
-width=142 height=135 src=image062.jpg v:shapes="_x0000_s1317"></span>
 </div>
 
 </body>
