Polishing touches, font, etc.

--- a/nomadic-family.html
+++ b/nomadic-family.html
@@ -6,7 +6,7 @@
     <title>Visit with Nomadic Family</title>
 </head>
 
-<body background="img/background.jpg" style="margin:0">
+<body background="img/background.jpg" style="margin:0;">
 
 <div style="width:90%;margin-left:auto;margin-right:auto;">
   <!-- header div -->
@@ -41,7 +41,7 @@
     <p>We are here to arrange custom trips for you during your time in Mongolia. Please
       contact us with your questions and needs.</p>
 
-    <h3>Countryside Visit with Nomadic Family</h3>
+    <h2>Countryside Visit with Nomadic Family</h2>
 
     <p>We are pleased to make available to you a very special opportunity for a home stay 
       with native Mongolians in the steppes outside of UlanBaatar. You will stay in a real ger 
