Switching to the awesome logo.

--- a/about-us.html
+++ b/about-us.html
@@ -10,18 +10,8 @@
 
 <div style="width:90%;margin-left:auto;margin-right:auto;">
   <!-- header div -->
-  <div style="height:130px;">
-    <p style="position:absolute;z-index:2;right:5%;font-size:75%;margin-top:5px;padding-right:5px;">
-      <strong>Discover Native Mongolia</strong></p>
-    
-    <img src="img/top-bar.gif" style="position:absolute;z-index:-10;width:90%;height:125px;">
-    <img src="img/top-blue.gif" style="position:absolute;top:115px;width:90%;">
-    <p height=3 class="align-right" style="position:absolute;top:115px;background-color:white;width:360px;height:3px;right:5%;">&nbsp;</p>
-    <img src="img/about-river.jpg" class="align-right" style="position:relative;z-index:-8;width:360px;height:125px;">
-    <img src="img/logo.gif" style="position:relative;top:40px;">
-
-    <p style="color:white;text-align:right;position:absolute;top:50px;right:5%;font-size:150%;">
-      <strong>TTNTours</strong></p>
+  <div>
+    <center><img src="img/logo.jpg" style="position:relative;"></center>
   </div>
 
   <ul id="nav">
