--- a/index.html
+++ b/index.html
@@ -10,27 +10,17 @@
 
 <div style="width:90%;margin-left:auto;margin-right:auto;">
   <!-- header div -->
-  <div style="height:130px;">
-  <p style="position:absolute;z-index:2;right:5%;font-size:75%;margin-top:5px;padding-right:5px;">
-    <strong>Discover Native Mongolia</strong></p>
-
-  <img src="img/top-bar.gif" style="position:absolute;z-index:-10;width:90%;height:125px;">
-  <img height=3 src="img/top-blue.gif" style="position:absolute;z-index:-9;width:90%;top:115px;">
-  <p height=3 class="align-right" style="position:absolute;top:115px;background-color:white;width:360px;height:3px;right:5%;">&nbsp;</p>
-  <img src="img/index-horizon.jpg" class="align-right" style="position:relative;z-index:-8;width:360px;height:125px;">
-  <img src="img/logo.gif" style="position:relative;top:40px;">
-
-  <p style="color:white;text-align:right;position:absolute;top:50px;right:5%;font-size:150%;">
-    <strong>TTNTours</strong></p> 
+  <div>
+    <center><img src="img/logo.jpg" style="position:relative;"></center>
   </div>
 
   <ul id="nav">
     <li class="first"><a href="http://nativemongolia.com/">Home</a></li>
-    <li><a href="/about-us.html">About Us</a></li>
+    <li><a href="/about-us.html">About&nbsp;Us</a></li>
     <li><a href="/testimonials.html">Testimonials</a></li>
-    <li><a href="/ulanbaatar-tours.html">Ulaanbaatar Tours</a></li>
-    <li><a href="/countryside-tours.html">Countryside Tours</a></li>
-    <li><a href="/nomadic-family.html">Visit with Nomadic Family</a></li>
+    <li><a href="/ulanbaatar-tours.html">Ulaanbaatar&nbsp;Tours</a></li>
+    <li><a href="/countryside-tours.html">Countryside&nbsp;Tours</a></li>
+    <li><a href="/nomadic-family.html">Visit&nbsp;with&nbsp;Nomadic&nbsp;Family</a></li>
   </ul>
 
   <img height=3 src="img/navbar-bottom.gif" style="width:100%;">
