Fixed breaking spaces in nav bar.

--- a/countryside-tours.html
+++ b/countryside-tours.html
@@ -71,7 +71,8 @@
       and rafting.</p>
 
    
-    <img src="img/tsoogii-with-dog.jpg">
+    <div class="image">
+      <img src="img/tsoogii-with-dog.jpg"></div>
     <img src="img/boroo.jpg">
     <img src="img/tsoogii.jpg">
     <img src="img/picnic.jpg">
