--- a/nomadic-family.html
+++ b/nomadic-family.html
@@ -16,11 +16,11 @@
 
   <ul id="nav">
     <li class="first"><a href="http://nativemongolia.com/">Home</a></li>
-    <li><a href="/about-us.html">About Us</a></li>
+    <li><a href="/about-us.html">About&nbsp;Us</a></li>
     <li><a href="/testimonials.html">Testimonials</a></li>
-    <li><a href="/ulanbaatar-tours.html">Ulaanbaatar Tours</a></li>
-    <li><a href="/countryside-tours.html">Countryside Tours</a></li>
-    <li><a href="/nomadic-family.html">Visit with Nomadic Family</a></li>
+    <li><a href="/ulanbaatar-tours.html">Ulaanbaatar&nbsp;Tours</a></li>
+    <li><a href="/countryside-tours.html">Countryside&nbsp;Tours</a></li>
+    <li><a href="/nomadic-family.html">Visit&nbsp;with&nbsp;Nomadic&nbsp;Family</a></li>
   </ul>
 
   <img height=3 src="img/navbar-bottom.gif" style="width:100%;">
