--- a/about-us.html
+++ b/about-us.html
@@ -16,11 +16,11 @@
 
   <ul id="nav">
     <li class="first"><a href="http://nativemongolia.com/">Home</a></li>
-    <li><a href="/about-us.html">About Us</a></li>
+    <li><a href="/about-us.html">About&nbsp;Us</a></li>
     <li><a href="/testimonials.html">Testimonials</a></li>
-    <li><a href="/ulanbaatar-tours.html">Ulaanbaatar Tours</a></li>
-    <li><a href="/countryside-tours.html">Countryside Tours</a></li>
-    <li><a href="/nomadic-family.html">Visit with Nomadic Family</a></li>
+    <li><a href="/ulanbaatar-tours.html">Ulaanbaatar&nbsp;Tours</a></li>
+    <li><a href="/countryside-tours.html">Countryside&nbsp;Tours</a></li>
+    <li><a href="/nomadic-family.html">Visit&nbsp;with&nbsp;Nomadic&nbsp;Family</a></li>
   </ul>
 
   <img height=3 src="img/navbar-bottom.gif" style="width:100%;">
@@ -47,7 +47,7 @@
 
     <table>
       <tr><td>
-    <div style="width:100%" class="white">
+    <div style="width:80%;margin-left:20%;margin-top:5%;" class="white space-p">
       <p>My name is Chimedtsogzol S. My family and friends call me Tsoogii.
         I grew up in the <em>sum</em> (town) of Erdenekhairkhan in Zavkhan
         <em>aimag</em> (province), which is in the north central portion of
