--- a/ulanbaatar-tours.html
+++ b/ulanbaatar-tours.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv=Content-Type content="text/html; utf-8">
     <link rel=stylesheet type="text/css" href="style.css">
-    <title>Home</title>
+    <title>Ulanbaatar Tours</title>
 </head>
 
 <body background="img/background.jpg" style="margin:0">
@@ -16,11 +16,11 @@
 
   <ul id="nav">
     <li class="first"><a href="http://nativemongolia.com/">Home</a></li>
-    <li><a href="/about-us.html">About Us</a></li>
+    <li><a href="/about-us.html">About&nbsp;Us</a></li>
     <li><a href="/testimonials.html">Testimonials</a></li>
-    <li><a href="/ub-tours.html">Ulaanbaatar Tours</a></li>
-    <li><a href="/countryside-tours.html">Countryside Tours</a></li>
-    <li><a href="/nomadic-family.html">Visit with Nomadic Family</a></li>
+    <li><a href="/ulanbaatar-tours.html">Ulaanbaatar&nbsp;Tours</a></li>
+    <li><a href="/countryside-tours.html">Countryside&nbsp;Tours</a></li>
+    <li><a href="/nomadic-family.html">Visit&nbsp;with&nbsp;Nomadic&nbsp;Family</a></li>
   </ul>
 
   <img height=3 src="img/navbar-bottom.gif" style="width:100%;">
@@ -51,7 +51,7 @@
 
     <table>
       <tr><td style="width:100px;"></td><td>
-    <div style="width:100%" class="white">
+    <div style="width:80%;margin-top:5%;margin-right:20%;" class="white space-p">
       <p>We are here to arrange custom trips for you during your time in Mongolia.
         Please contact us with your questions and needs.</p>
       <h3>Arriving in Ulanbaatar (UB)</h3>
