Final polishing touches before alpha release, except for footer.

--- a/nomadic-family.html
+++ b/nomadic-family.html
@@ -32,7 +32,7 @@
       contact us with your questions and needs.</p>
 
     <h2>Countryside Visit with Nomadic Family</h2>
-
+    <div class="white">
     <p>We are pleased to make available to you a very special opportunity for a home stay 
       with native Mongolians in the steppes outside of UlanBaatar. You will stay in a real ger 
       (not the concrete floor, tourist version often found in tourist camps); observe the nomadic 
@@ -55,13 +55,14 @@
     <p>We are excited to extend this opportunity to you, as it is an ideal way to achieve our goal of showing you the real
       Mongolian nomadic lifestyle in a way that is convenient and inexpensive for you. Please contact us to plan your
       countryside visit!</p>
-
+    </div>
+    <center>
     <img src="img/cattle.jpg">
     <img src="img/cattle-close.jpg">
     <img src="img/family.jpg">
     <img src="img/gers.jpg">
     <img src="img/ger.jpg">
-
+    </center>
   </div>
 
   <!-- footer -->
