Fixed blank space.

--- a/countryside-tours.html
+++ b/countryside-tours.html
@@ -34,6 +34,7 @@
 
     <center><h2 style="width:250px">Countryside Tours</h2></center>
 
+    <div class="white">
     <p>After a short stay in Ulanbaatar, it’s time to get out of the city and 
       into the countryside! That is the desire and goal of most of the
       tourists who come to Mongolia.</p>
@@ -51,9 +52,10 @@
       — we can take you there and at the same time, see to it that you 
       experience the ‘real’ Mongolia and its people and learn about
       our history.</p>
-
+    </div>
     <center><h3 style="width:250px">Closer to Ulanbaatar</h3></center>
 
+    <div class="white">
     <p>Distances are great in Mongolia and are not traveled over as quickly as 
       in the more developed parts of the world. This is part of the excitement of 
       visiting Mongolia; however, it also adds to the difficulty of the visit!
@@ -69,7 +71,7 @@
     <p>We can help you arrange visits to the beautiful nearby alpine area of 
       Terelj where, if you’d like, you can go hiking, rock climbing, horse riding, 
       and rafting.</p>
-
+    </div>
    
     <div class="image">
       <img src="img/tsoogii-with-dog.jpg"></div>
