Broken index footer.

--- a/index.html
+++ b/index.html
@@ -60,19 +60,21 @@
   <img height=3 src="img/bottom-blue.gif" style="width:100%;">
 
   <div>
-    <div style="width:327px;" class="align-left">
-      <img height=182 src="img/soldiers.jpg">
+    <div>
+      <img src="img/soldiers.jpg">
     </div>
-
-    <div style="background-color:white;width:700px;position:relative;left:15px;z-index:-10;">
+    <div style="background-color:white;position:relative;margin-left:15px;margin-right:15px;" class="align-left">
       <h3 style="color:#066;">To Contact Us:</h3>
       <p>USA Phone: 218-201-0488 (Janlyn Gosse)</p>
       <p class="no-indent">E-mail: Tsoogii2000mon@yahoo.com (Tsoogii)</p>
       <p class="no-indent">Alternate E-mail: Janlyn@snowgoose.biz (Janlyn Gosse)</p>
     </div>
-    
+<!--
+    <div>
+      <img src="img/river.jpg">
+    </div>
+-->
   </div>
-  
   <img style="width:80%;position:relative;left:10%;" height=4 src="img/footer-bar.gif">
 
 </div>
