--- a/countryside-tours.html
+++ b/countryside-tours.html
@@ -71,6 +71,7 @@
     <p>We can help you arrange visits to the beautiful nearby alpine area of 
       Terelj where, if you’d like, you can go hiking, rock climbing, horse riding, 
       and rafting.</p>
+    </div>
 
     <center>
    <table><tr><td>
